# cups_http_gateway

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.github/actions/prepare-env/: action.yml
.github/workflows/: 02-check_code.yaml  03-release_draft.yaml  04-publish_release.yml  05-discord_notify.yaml  06-build_binaries.yaml
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/cups/: client.rs  mod.rs
src/domain/: job.rs  mod.rs  print_options.rs  printer.rs
src/entrypoints/http/: app_state.rs  errors.rs  mod.rs  models.rs  router.rs
src/entrypoints/http/routes/: jobs.rs  mod.rs  printers.rs  status.rs
src/services/: capabilities_cache.rs  escpos_raster.rs  image_to_pdf.rs  mod.rs  printer_service.rs
